--- a/slides.html
+++ b/slides.html
@@ -144,7 +144,7 @@
     
     <ul>
     <li>shift to a slightly different processing model</li>
-    <li><strong>NEW!</strong> <strong>cache</strong> all Libero item data (MySQL) – less network overhead</li>
+    <li><strong>NEW!</strong> <strong>cache</strong> all Libero item data (MySQL) – less network overhead – not possible without Libero <em>hacks</em></li>
     <li><strong>NEW!</strong> hold all raw source data in <strong>elasticsearch</strong> – faster, more fine grained access</li>
     <li>no more XML configuration, but one (or more) python scripts per data source</li>
     <li>Python (1708), Java (1292), bash (800)</li>
