--- a/slides.html
+++ b/slides.html
@@ -115,7 +115,7 @@
     <li>2nd iteration +
     
     <ul>
-    <li>multiprocessing with 10–200 worker</li>
+    <li>multiprocessing with 10–200 worker processes</li>
     <li>plain SQL</li>
     <li>optimized (batched) Libero-requests</li>
     <li>a bit of memcached</li>
