--- a/slides.html
+++ b/slides.html
@@ -39,7 +39,7 @@
         <ul>
         <li><p>handle <strong>various</strong> data sources</p>
         
-        <p>  <em>BSZ, Naxos, E-Book Library, Nutzergesteuerte Erwerbung (PDA), ...</em></p></li>
+        <p>  <em>BSZ, Naxos, Nutzergesteuerte Erwerbung (Print, Ebooks), ...</em></p></li>
         <li><p>export <strong>FINCMARC</strong> as deliverable for VuFind <strong>frontend</strong></p></li>
         <li>handle <strong>deduplication</strong>, <strong>Libero</strong> item data, MARC field rewrites, ...</li>
         </ul>
