--- a/slides.html
+++ b/slides.html
@@ -298,6 +298,19 @@
       </div>
       <div class='spacer bottom'></div>
     </section>
+    <section class='left slide'>
+      <div class='spacer top'></div>
+      <div class='content'>
+        <h1>Credits</h1>
+        
+        <ul>
+        <li>http://www.flickr.com/photos/catdancing/4652800293/</li>
+        <li>http://www.flickr.com/photos/andreaskoller/154706613/</li>
+        <li>http://www.flickr.com/photos/ddebold/3738709697/</li>
+        </ul>
+      </div>
+      <div class='spacer bottom'></div>
+    </section>
     <!-- deck.js navigation extension -->
     <a class='deck-prev-link' href='#' title='Previous'>&#8592;</a>
     <a class='deck-next-link' href='#' title='Next'>&#8594;</a>
